pre spacingInterpolator filtering