@@ -1,6 +1,5 @@
 package de.bossascrew.splinelib;
 
-import com.google.common.collect.Lists;
 import de.bossascrew.splinelib.interpolate.RoundingInterpolator;
 import de.bossascrew.splinelib.interpolate.SpacingInterpolator;
 import de.bossascrew.splinelib.shape.Shape;
@@ -9,7 +8,9 @@ import lombok.Getter;
 import org.bukkit.util.Vector;
 
 import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -17,20 +18,22 @@ import java.util.stream.Collectors;
 public class SplineBuilder {
 
 	private final List<BezierVector> baseVectors;
-	private List<List<Vector>> roundedPath = new ArrayList<>();
+	private Map<BezierVector, List<Vector>> roundedPath = new LinkedHashMap<>();
+	private Map<BezierVector, List<Vector>> filteredRoundedPath = new LinkedHashMap<>();
 	private List<Vector> distancedPath = new ArrayList<>();
-	private List<Vector> processedPath = new ArrayList<>();
+	private List<Vector> filteredPath = new ArrayList<>();
 
-	private RoundingInterpolator<BezierVector, List<Vector>> roundingInterpolator = (points, closedPath) -> {
-		return points.stream().map(v -> (List<Vector>) Lists.newArrayList((Vector) v)).toList();
+	private RoundingInterpolator<List<BezierVector>, Map<BezierVector, List<Vector>>> roundingInterpolator = (points, closedPath) -> {
+		return null; //TODO
 	};
-	private SpacingInterpolator<List<Vector>, Vector> pointDistanceInterpolator = (points, closedPath) -> {
+	private SpacingInterpolator<Map<BezierVector, List<Vector>>, List<Vector>> pointDistanceInterpolator = (points, closedPath) -> {
 		List<Vector> list = new ArrayList<>();
-		points.forEach(list::addAll);
+		points.forEach((bezierVector, vectors) -> list.addAll(vectors));
 		return list;
 	};
 
 	private Predicate<Vector> pointFilter = null;
+	private final Map<Predicate<BezierVector>, Predicate<Vector>> segmentFilterMap = new LinkedHashMap<>();
 
 	private boolean closePath = false;
 
@@ -42,18 +45,19 @@ public class SplineBuilder {
 		this.baseVectors = shape.getBezierVectors();
 	}
 
-	public SplineBuilder withRoundingInterpolator(RoundingInterpolator<BezierVector, List<Vector>> roundingInterpolator) {
+	public SplineBuilder withRoundingInterpolator(RoundingInterpolator<List<BezierVector>, Map<BezierVector, List<Vector>>> roundingInterpolator) {
 		this.roundingInterpolator = roundingInterpolator;
 		return this;
 	}
 
-	public SplineBuilder withSpacingInterpolator(SpacingInterpolator<List<Vector>, Vector> spacingInterpolator) {
+	public SplineBuilder withSpacingInterpolator(SpacingInterpolator<Map<BezierVector, List<Vector>>, List<Vector>> spacingInterpolator) {
 		this.pointDistanceInterpolator = spacingInterpolator;
 		return this;
 	}
 
-	public SplineBuilder withSegmentedPointFilter(BezierVector segmentStart, Predicate<Vector> pointFilter) {
-		return this; //TODO
+	public SplineBuilder withSegmentedPointFilter(Predicate<BezierVector> segmentedFilter, Predicate<Vector> pointFilter) {
+		segmentFilterMap.put(segmentedFilter, pointFilter);
+		return this;
 	}
 
 	public SplineBuilder withPointFilter(Predicate<Vector> pointFilter) {
@@ -68,14 +72,36 @@ public class SplineBuilder {
 
 	public List<Vector> build() {
 
+		//interpolate spline shape
 		roundedPath = roundingInterpolator.interpolate(baseVectors, closePath);
-		distancedPath = pointDistanceInterpolator.interpolate(roundedPath, closePath);
-		if (pointFilter != null) {
-			processedPath = distancedPath.stream().filter(pointFilter).collect(Collectors.toList());
-		} else {
-			processedPath = new ArrayList<>(distancedPath);
+
+		//filtering per segment
+		filteredRoundedPath = roundedPath;
+		if (!segmentFilterMap.isEmpty()) {
+			for (Predicate<BezierVector> segmentFilter : segmentFilterMap.keySet()) {
+				Predicate<Vector> vectorFilter = segmentFilterMap.get(segmentFilter);
+				for (BezierVector segment : baseVectors.stream().filter(segmentFilter).toList()) {
+					if (!filteredRoundedPath.containsKey(segment)) {
+						continue;
+					}
+					if (vectorFilter == null) {
+						continue;
+					}
+					filteredRoundedPath.put(segment, filteredRoundedPath.get(segment).stream().filter(vectorFilter).toList());
+				}
+			}
 		}
 
-		return processedPath;
+		//interpolate distance
+		distancedPath = pointDistanceInterpolator.interpolate(filteredRoundedPath, closePath);
+
+		//filter final points globally
+		if (pointFilter != null) {
+			filteredPath = distancedPath.stream().filter(pointFilter).collect(Collectors.toList());
+		} else {
+			filteredPath = new ArrayList<>(distancedPath);
+		}
+
+		return filteredPath;
 	}
 }
